--- a/index.html
+++ b/index.html
@@ -38,7 +38,96 @@
     </style>
   </head>
   <body class="font-manrope">
-    <header></header>
+    <header class="bg-stone-100 pt-10 ">
+      <nav>
+        <div class="navbar container mx-auto flex justify-between">
+          <div class="flex flex-row-reverse justify-between">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 bg-white rounded-full p-1"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+              >
+                <li><a>Home</a></li>
+                <li><a>Services</a></li>
+                <li><a>Portfolio</a></li>
+                <li><a>Blogs</a></li>
+                <li><a>Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="flex items-center justify-center">
+              <i
+                class="fa-solid fa-arrow-right bg-[#ABEF5F] text-black rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
+              ></i>
+              <a class="btn btn-ghost text-3xl font-extrabold text-[#212121]"
+                >Rinterio</a
+              >
+            </div>
+          </div>
+          <div class="hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li><a class="font-extrabold text-[#494949]">Home</a></li>
+              <li><a class="text-[#737373]">Services</a></li>
+              <li><a class="text-[#737373]">Portfolio</a></li>
+              <li><a class="text-[#737373]">Blogs</a></li>
+              <li><a class="text-[#737373]">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="hidden lg:flex space-x-2">
+            <i
+              class="text-[#737373] p-2 bg-white rounded-full fa-solid fa-magnifying-glass"
+            ></i>
+            <i
+              class="text-[#737373] p-2 bg-white rounded-full fa-solid fa-cart-shopping"
+            ></i>
+            <a class="btn bg-[#ABEF5F] text-xl font-extrabold rounded-3xl"
+              >Book Consult
+              <i
+                class="fa-solid fa-arrow-right bg-black text-white rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
+              ></i
+            ></a>
+          </div>
+        </div>
+      </nav>
+      <div class="container mx-auto pb-10 lg:pb-24">
+        <div class="w-5/6 mx-auto flex flex-col space-y-6">
+          <img class="" src="./assets/banner.png" alt="" />
+          <h1
+            class="text-center text-[#212121] font-extrabold text-3xl lg:text-6xl"
+          >
+            A barn house of this design has a striking appearance
+          </h1>
+          <p class="text-center font-medium">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents, and
+            large windows that flood the space with natural light.
+          </p>
+          <div
+            class="mx-auto flex justify-center space-x-2 bg-lime-100 p-3 rounded-3xl w-full lg:w-1/3"
+          >
+            <button class="font-bold text-xl">View Details</button>
+            <i
+              class="fa-solid fa-arrow-right bg-[#ABEF5F] text-black rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
+            ></i>
+          </div>
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
