--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body class="font-manrope">
-    <header class="bg-stone-100 pt-10 ">
+    <header class="bg-stone-100 pt-10">
       <nav>
         <div class="navbar container mx-auto flex justify-between">
           <div class="flex flex-row-reverse justify-between">
@@ -105,7 +105,7 @@
         </div>
       </nav>
       <div class="container mx-auto pb-10 lg:pb-24">
-        <div class="w-5/6 mx-auto flex flex-col space-y-6">
+        <div class="w-5/6 mx-auto flex flex-col space-y-12">
           <img class="" src="./assets/banner.png" alt="" />
           <h1
             class="text-center text-[#212121] font-extrabold text-3xl lg:text-6xl"
@@ -128,7 +128,67 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Thoughtful Design Section -->
+      <section>
+        <div class="hero bg-base-200 min-h-screen">
+          <div class="hero-content flex-col-reverse lg:flex-row-reverse">
+            <img
+              src="./assets/rectangle.png"
+              class="max-w-full rounded-lg shadow-2xl"
+            />
+            <div class="">
+              <div
+                class="lg:mx-0 mx-auto flex justify-center space-x-2 bg-white p-2 rounded-3xl lg:w-1/5 w-1/2 mb-4"
+              >
+                <i
+                  class="fa-solid fa-arrow-right bg-white text-[#494949] rounded-full p-1 w-8 h-8 flex items-center justify-center text-2xl"
+                ></i>
+                <button class="font-bold">About Us</button>
+              </div>
+              <h1
+                class="text-[#212121] text-2xl lg:text-5xl font-bold text-center lg:text-left"
+              >
+                We design thoughtful, liveable spaces
+              </h1>
+              <p class="py-6 lg:w-5/6 text-center lg:text-left">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+              <div
+                class="flex items-center space-x-5 bg-white lg:w-5/6 p-4 rounded-2xl mb-6"
+              >
+                <img src="./assets/commercial.png" alt="" />
+                <div>
+                  <h6 class="text-xl font-extrabold text-[#494949]">
+                    Commercial
+                  </h6>
+                  <p class="font-medium text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex items-center space-x-5 bg-white lg:w-5/6 p-4 rounded-2xl"
+              >
+                <img src="./assets/residential.png" alt="" />
+                <div>
+                  <h6 class="text-xl font-extrabold text-[#494949]">
+                    Commercial
+                  </h6>
+                  <p class="font-medium text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
