--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <main>
       <!-- Thoughtful Design Section -->
       <section>
-        <div class="hero bg-base-200 min-h-screen">
+        <div class="hero bg-base-200 lg:pb-20">
           <div class="hero-content flex-col-reverse lg:flex-row-reverse">
             <img
               src="./assets/rectangle.png"
@@ -184,6 +184,62 @@
                   </p>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Work Process Section -->
+      <section class="bg-base-200">
+        <div class="container mx-auto flex flex-col items-center p-5 space-y-5">
+          <div
+            class="lg:mx-0 mx-auto flex justify-center space-x-2 bg-white p-2 rounded-3xl lg:w-1/5 w-1/2 mb-4"
+          >
+            <i
+              class="fa-solid fa-arrow-right bg-white text-[#494949] rounded-full p-1 w-8 h-8 flex items-center justify-center text-2xl"
+            ></i>
+            <button class="font-bold text-[#212121]">How we works</button>
+          </div>
+          <h2 class="text-[#212121] font-bold text-4xl">Our Works Process</h2>
+          <p class="font-medium text-[#494949] text-center">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+          <div class="grid grid-cols-1 lg:grid-cols-4 gap-5">
+            <div class="bg-[#E7C1D3] p-5 rounded-2xl space-y-2">
+              <img src="./assets/concept.png" alt="" />
+              <h5 class="font-extrabold text-[#1C1C1C] text-xl">Concept</h5>
+              <p class="text-[#494949] font-medium">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <div class="bg-[#EFDA6E] p-5 rounded-2xl space-y-2">
+              <img src="./assets/flow-chart.png" alt="" />
+              <h5 class="font-extrabold text-[#1C1C1C] text-xl">
+                Design Process
+              </h5>
+              <p class="text-[#494949] font-medium">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <div class="bg-[#A4DAC3] p-5 rounded-2xl space-y-2">
+              <img src="./assets/vision.png" alt="" />
+              <h5 class="font-extrabold text-[#1C1C1C] text-xl">Supervision</h5>
+              <p class="text-[#494949] font-medium">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <div class="bg-[#77AAEA] p-5 rounded-2xl space-y-2">
+              <img src="./assets/budget-planning.png" alt="" />
+              <h5 class="font-extrabold text-[#1C1C1C] text-xl">
+                Budget Planning
+              </h5>
+              <p class="text-[#494949] font-medium">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
             </div>
           </div>
         </div>
