Portfolio section done

--- a/index.html
+++ b/index.html
@@ -244,6 +244,107 @@
           </div>
         </div>
       </section>
+      <!-- Latest Portfolio Section -->
+      <section
+        class="bg-gray-50 p-4 py-10 container mx-auto flex flex-col items-center"
+      >
+        <div
+          class="mx-auto flex justify-center space-x-2 bg-[#ABEF5F33] p-2 rounded-3xl lg:w-1/5 w-3/4 mb-4"
+        >
+          <i
+            class="fa-solid fa-arrow-right bg-[#ABEF5F33] text-[#494949] rounded-full p-1 w-8 h-8 flex items-center justify-center text-2xl"
+          ></i>
+          <button class="font-bold text-[#494949]">
+            Explore our Latest works
+          </button>
+        </div>
+        <h2 class="text-[#212121] text-2xl font-bold text-center py-8">
+          Our Latest Portfolio
+        </h2>
+        <p class="font-medium text-[#494949] text-center pb-10 lg:w-2/3">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication,featuring weathered wood, sleek metal accents.
+        </p>
+        <div>
+          <div class="lg:flex lg:items-center lg:justify-between">
+            <div
+              class="flex flex-col lg:items-center lg:justify-center lg:flex-row lg:space-x-4 space-y-4 p-4 rounded-2xl bg-white"
+            >
+              <img class="lg:w-1/2" src="./assets/img1.png" alt="" />
+              <div class="space-y-4">
+                <h5 class="text-xl font-extrabold text-[#494949]">
+                  Commercial
+                </h5>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <div class="grid grid-cols-2 justify-center">
+                  <button class="font-extrabold text-xl text-left">
+                    View Details
+                  </button>
+                  <i
+                    class="fa-solid fa-arrow-right bg-[#ABEF5F] text-black rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl -ml-12"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div class="w-full lg:w-2/5 my-8 p-4 bg-[#ffffff] rounded-xl">
+              <img class="w-full lg:w-full" src="./assets/img2.png" alt="" />
+            </div>
+          </div>
+          <div
+            class="w-full lg:my-4 my-8 p-4 bg-[#ffffff] lg:bg-gray-50 rounded-xl"
+          >
+            <img class="lg:hidden w-full" src="./assets/img5.png" alt="" />
+          </div>
+
+          <div
+            class="lg:grid lg:grid-cols-4 items-center justify-between gap-4"
+          >
+            <div
+              class="hidden lg:block lg:col-span-1 w-full lg:h-[180px] my-8 p-4 bg-[#ffffff] rounded-xl"
+            >
+              <img class="w-full lg:h-full" src="./assets/img3.png" alt="" />
+            </div>
+            <div
+              class="lg:h-[180px] lg:col-span-2 flex flex-col lg:flex-row space-y-4 p-4 rounded-2xl bg-white"
+            >
+              <img class="lg:h-full" src="./assets/img4.png" alt="" />
+              <div
+                class="space-y-4 lg:flex lg:flex-col lg:items-start lg:justify-center lg:space-y-2 lg:ml-3"
+              >
+                <h5 class="text-xl font-extrabold text-[#494949]">
+                  Commercial
+                </h5>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <div class="grid grid-cols-2 justify-center">
+                  <button class="font-extrabold text-xl text-left">
+                    View Details
+                  </button>
+                  <i
+                    class="fa-solid fa-arrow-right bg-[#ABEF5F] text-black rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl -ml-12 lg:ml-2"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div
+              class="lg:hidden w-full my-8 p-4 bg-[#ffffff] lg:bg-gray-50 rounded-xl"
+            >
+              <img class="w-full" src="./assets/img3.png" alt="" />
+            </div>
+            <div
+              class="lg:h-[180px] lg:col-span-1 w-full my-8 p-4 lg:p-1 bg-[#ffffff] rounded-xl"
+            >
+              <img class="w-full lg:h-full" src="./assets/img5.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
