--- a/index.html
+++ b/index.html
@@ -345,6 +345,53 @@
           </div>
         </div>
       </section>
+      <!-- Next Project Section -->
+      <section
+        class="container mx-auto bg-[url('/assets/bg.jpg')] bg-cover mt-4 mb-10 pt-20 lg:px-48"
+      >
+        <div class="p-5">
+          <div
+            class="mx-auto flex justify-center space-x-2 bg-[#ABEF5F33] p-2 rounded-3xl lg:w-1/5 w-1/2 mb-4"
+          >
+            <i
+              class="fa-solid fa-arrow-right bg-[#ABEF5F33] text-[#494949] rounded-full p-1 w-8 h-8 flex items-center justify-center text-2xl"
+            ></i>
+            <button class="font-bold text-[#494949]">Let’s Connect</button>
+          </div>
+          <h2 class="text-[#212121] text-4xl font-bold text-center">
+            Let’s Discuss Next Project
+          </h2>
+          <p class="text-[#494949] font-medium text-center my-10">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+          <div class="grid lg:grid-cols-2 gap-4 pb-4">
+            <div class="">
+              <input class="p-2 rounded-3xl w-full" type="text" placeholder="First Name*" />
+            </div>
+            <div>
+              <input class="p-2 rounded-3xl w-full" type="text" placeholder="Last Name*" />
+            </div>
+            <div>
+              <input class="p-2 rounded-3xl w-full" type="text" placeholder="Phone Number*" />
+            </div>
+            <div>
+              <input class="p-2 rounded-3xl w-full" type="text" placeholder="Email *" />
+            </div>
+            <div class="lg:col-span-2">
+              <input class="p-2 pb-32 rounded-3xl w-full" type="text" placeholder="Write your message here" />
+            </div>
+          </div>
+          <div
+            class="mx-auto flex justify-center space-x-2 bg-[#ABEF5F] p-3 rounded-3xl w-full lg:w-full"
+          >
+            <button class="font-extrabold text-xl text-[#1C1C1C]">Send Mail</button>
+            <i
+              class="fa-solid fa-arrow-right bg-[#000000] text-white rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
+            ></i>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
