Footer section done

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
       </section>
       <!-- Next Project Section -->
       <section
-        class="container mx-auto bg-[url('/assets/bg.jpg')] bg-cover mt-4 mb-10 pt-20 lg:px-48"
+        class="container mx-auto bg-[url('/assets/bg.jpg')] bg-cover mt-4 pb-10 pt-20 lg:px-48"
       >
         <div class="p-5">
           <div
@@ -367,25 +367,47 @@
           </p>
           <div class="grid lg:grid-cols-2 gap-4 pb-4">
             <div class="">
-              <input class="p-2 rounded-3xl w-full" type="text" placeholder="First Name*" />
+              <input
+                class="p-2 rounded-3xl w-full"
+                type="text"
+                placeholder="First Name*"
+              />
             </div>
             <div>
-              <input class="p-2 rounded-3xl w-full" type="text" placeholder="Last Name*" />
+              <input
+                class="p-2 rounded-3xl w-full"
+                type="text"
+                placeholder="Last Name*"
+              />
             </div>
             <div>
-              <input class="p-2 rounded-3xl w-full" type="text" placeholder="Phone Number*" />
+              <input
+                class="p-2 rounded-3xl w-full"
+                type="text"
+                placeholder="Phone Number*"
+              />
             </div>
             <div>
-              <input class="p-2 rounded-3xl w-full" type="text" placeholder="Email *" />
+              <input
+                class="p-2 rounded-3xl w-full"
+                type="text"
+                placeholder="Email *"
+              />
             </div>
             <div class="lg:col-span-2">
-              <input class="p-2 pb-32 rounded-3xl w-full" type="text" placeholder="Write your message here" />
+              <input
+                class="p-2 pb-32 rounded-3xl w-full"
+                type="text"
+                placeholder="Write your message here"
+              />
             </div>
           </div>
           <div
             class="mx-auto flex justify-center space-x-2 bg-[#ABEF5F] p-3 rounded-3xl w-full lg:w-full"
           >
-            <button class="font-extrabold text-xl text-[#1C1C1C]">Send Mail</button>
+            <button class="font-extrabold text-xl text-[#1C1C1C]">
+              Send Mail
+            </button>
             <i
               class="fa-solid fa-arrow-right bg-[#000000] text-white rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
             ></i>
@@ -393,6 +415,41 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <!-- Footer Section -->
+    <footer class="bg-[#1C1C1C] px-8 lg:px-24 py-16 lg:space-y-8 mt-0">
+      <div class="flex items-center justify-center">
+        <i
+          class="fa-solid fa-arrow-right bg-[#ABEF5F] text-black rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
+        ></i>
+        <a class="btn btn-ghost text-3xl font-extrabold text-[#ffffff]"
+          >Rinterio</a
+        >
+      </div>
+      <p class="font-medium text-[#737373] text-center">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+      <div class="py-5 flex items-center justify-center">
+        <ul
+          class="flex flex-col lg:flex-row items-center justify-center lg:justify-between lg:gap-x-24 gap-3 text-[#E9E9E9]"
+        >
+          <li><a class="">Home</a></li>
+          <li><a>Services</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Blogs</a></li>
+          <li><a>Contact Us</a></li>
+        </ul>
+      </div>
+      <div
+        class="mx-auto flex justify-center space-x-2 bg-[#ABEF5F] p-3 rounded-full w-full lg:w-1/4"
+      >
+        <button class="font-extrabold text-xl text-[#1C1C1C]">
+          Book Consult
+        </button>
+        <i
+          class="fa-solid fa-arrow-right bg-[#000000] text-white rounded-full p-1 -rotate-45 w-8 h-8 flex items-center justify-center text-2xl"
+        ></i>
+      </div>
+    </footer>
   </body>
 </html>
