--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="hero bg-base-200 lg:pb-20">
           <div class="hero-content flex-col-reverse lg:flex-row-reverse">
             <img
-              src="./assets/rectangle.png"
+              src="./assets/img3.png"
               class="max-w-full rounded-lg shadow-2xl"
             />
             <div class="relative">
@@ -157,7 +157,7 @@
                 We design thoughtful, liveable spaces
               </h1>
               <p class="py-6 lg:w-5/6 text-center lg:text-left">
-                The barn house captivates with its blend of rustic charm and
+                The barn house captivate with its blend of rustic charm and
                 modern sophistication, featuring weathered wood, sleek metal
                 accents.
               </p>
