Some modification done

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
         <div class="hero bg-base-200 lg:pb-20">
           <div class="hero-content flex-col-reverse lg:flex-row-reverse">
             <img
-              src="./assets/img3.png"
+              src="./assets/house.png"
               class="max-w-full rounded-lg shadow-2xl"
             />
             <div class="relative">
               <img
                 class="hidden lg:block border-dashed border-2 border-gray-400 h-24 w-32 absolute -top-20 -left-10"
-                src="./assets/vector.png"
+                src="./assets/vec.png"
                 alt=""
               />
               <div
